syntax = "proto3";

option go_package = "pkg/security/proto/ebpfless";

package ebpfless;

enum SyscallType {
    Unknown = 0;
    Exec = 1;
    Fork = 2;
    Open = 3;
    Exit = 4;
    Fcntl = 5;
}

message ContainerContext {
    string ID = 1;
    string Name = 2;
    string Tag = 3;
    uint64 CreatedAt = 4;
}

message FcntlSyscallMsg {
    uint32 Fd = 1;
    uint32 Cmd = 2;
}

message ExecSyscallMsg {
    string Filename = 1;
    repeated string Args = 2;
    repeated string Envs = 3;
}

message ForkSyscallMsg {
    uint32 PPID = 1;
}

message ExitSyscallMsg {}

message OpenSyscallMsg {
    string Filename = 1;
    uint32 Flags = 2;
    uint32 Mode = 3;
}

message DupSyscallFakeMsg {
    int32 OldFd = 1;
}

message ChdirSyscallFakeMsg {
    string Path = 1;
}

message SyscallMsg {
    uint64 SeqNum = 1;
    SyscallType Type = 2;
    uint32 PID = 3;
    ContainerContext ContainerContext = 4;

    ExecSyscallMsg Exec = 5;
    OpenSyscallMsg Open = 6;
    ForkSyscallMsg Fork = 7;
    ExitSyscallMsg Exit = 8;
    FcntlSyscallMsg Fcntl = 9;
    DupSyscallFakeMsg Dup = 10;
    ChdirSyscallFakeMsg Chdir = 11;
}

message Response {}

service SyscallMsgStream {
	rpc SendSyscallMsg (SyscallMsg) returns (Response) {}
}